--- a/refrences.bib
+++ b/refrences.bib
@@ -507,3 +507,34 @@ on root volumes, especially during early boot. In this paper we describe an appr
     year = {1999},
 }
 
+@inproceedings{Hasan:2009:CFP:1525908.1525909,
+ author = {Hasan, Ragib and Sion, Radu and Winslett, Marianne},
+ title = {The Case of the Fake Picasso: Preventing History Forgery with Secure Provenance},
+ booktitle = {Proccedings of the 7th Conference on File and Storage Technologies},
+ series = {FAST '09},
+ year = {2009},
+ location = {San Francisco, California},
+ pages = {1--14},
+ numpages = {14},
+ url = {http://dl.acm.org/citation.cfm?id=1525908.1525909},
+ acmid = {1525909},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+} 
+
+@misc{rfc2748,
+	series =	{Request for Comments},
+	number=		2748,
+	howpublished=	{RFC 2748},
+	publisher =	{RFC Editor},
+	doi =		{10.17487/rfc2748},
+	url =		{https://rfc-editor.org/rfc/rfc2748.txt},
+	author=		{Shai Herzog},
+	title=		{{The COPS (Common Open Policy Service) Protocol}},
+	pagetotal =	38,
+	year =		2013,
+	month =		mar,
+	day =		2,
+	abstract =	{This document describes a simple client/server model for supporting policy control over QoS signaling protocols. [STANDARDS-TRACK]},
+}
+
