--- a/chapter4.tex
+++ b/chapter4.tex
@@ -2,7 +2,7 @@
 
 \chapter{Storage Optimization Framework for Provenance Data Storage in IoT devices} \label{MostNarrowEasy}
 
-In this chapter we define our model and algorithms for storage optimization of provenance data in IoT devices. We focus on all of the proposed techniques such as data pruning. We evaluate our hypothesis using the proof of concept ideology.
+In this chapter, we define our model and algorithms for storage optimization of provenance data in IoT. We focus on our proposed data pruning technique. We evaluate our hypothesis using the proof of concept ideology.
 
 %\section{Definitions}
 %
@@ -23,11 +23,22 @@ In this chapter we define our model and algorithms for storage optimization of p
 %\end{definition}
 
 
-\section{A Policy-Based Data Pruning Approach}
-\par We envision large amounts of provenance data will be generated from our provenance collection framework. Due to the memory constraints on devices at the sensor and device layer of the IoT architecture, there is a need to create for an efficient storage of provenance data. To address this issue, we define a policy driven framework that provides a policy scheme for the enforcement of provenance storage. Policy approach allows for the flexibility of provenance selection. A policy approach makes selecting what provenance is considered important to a specific IoT architecture. Since various organizations have varied provenance requirement, making provenance requirement static might not work across all IoT architecture. The policy framework contains a policy document which contains information on the provenance data that are permitted  to be collected. A policy framework is used to address the  resource constraint problems encountered when storing large amounts of provenance data on low memory devices. Policy document is created by the user who serves as an administrator.  An administrator is a user which has the right to add, delete or modify the policy document. For implementation, there are several policy models can be utilized to integrate a policy model  with the IoT framework. To implement a policy based framework, We propose to use the eXtensible Markup Language(XACML) policy model \cite{xacml} to to generate and enforce provenance policy for our IoT framework.
+\section{A policy-based approach to efficient provenance storage}
+\par Provenance generates more data than the data in which provenance is being collected. Due to the large influx of real-time data generated from sensor and actuators in IoT, we envision large amounts of provenance data will generated from our provenance collection framework. The resource constraints on the sensor/actuator and the device layer of the IoT architecture makes it even more challenging. There is a need to create an efficient storage framework for storing provenance data. To address this issue, we define a policy driven framework that provides a policy scheme for the enforcement of provenance storage. Policy approach allows the flexibility of provenance selection. A policy approach makes selecting what provenance is considered important to a specific IoT architecture thereby eliminating irrelevant provenance information. Since various organizations have varied provenance requirement, making provenance requirement static might not be suitable across all IoT architecture. The policy framework contains a policy document. This document contains information on provenance data that is considered relevant to the IoT architecture. A policy framework is used to address the resource constraint encountered when storing large amounts of provenance data on low memory devices. Policy document is created by the user who serves as an administrator.  An administrator is a user which has the right to add, delete or modify a policy document. For implementation, there are several policy models can be utilized to integrate a policy model  with the IoT framework. 
+
+\par Our policy architecture is modeled using the Common Open Policy Service(COPS) Standard \cite{rfc2748}. COPS consists of components for policy generation, evaluation and enforcement. The Policy Enforcement Point (PEP) enforces decisions received from the Policy Decision Point (PDP). The PDP evaluates policies and generates decision. The model is extended to include a secondary decision point(SDP). This allows for distributed policy evaluation freeing up the PDP from communication bottlenecks caused by large amounts of request received by a single PDP. Figure below illustrates a system architecture of our framework. Various layers of the IoT architecture contains different components of access control and enforcement model. Sensor/actuator layers is omitted due to this layer having the largest amount of memory restraints. Additionally, sensors and actuators are contained in the device layer and and as such does not require that data be pruned at this layer. This approach of using policy for enforcement is slightly different from the typical access control approach. In other words, Policy is used for the resource enforcement of provenance data collected. This enables efficient pruning of provenance data in which all irrelevant data discarded. 
+
+\begin{figure}[h]
+\begin{center}
+
+\includegraphics[height=3.5in]{policy_architecture.png}
+\end{center}
+\caption{Policy based system architecture which allows for effective data storage}
+
+\end{figure}
 
 
-
+Policy document is generated at the device layer and evaluated at the gateway and cloud layer. The PEP which is involved with generating requests is located in the device and gateway layer. SDP is located in the gateway layer. This allows for policy evaluation without inuring additional network overhead of communicating with the PDP located in the cloud layer. To implement our policy based framework, We propose to use the eXtensible Markup Language(XACML) policy model \cite{xacml} to to generate and enforce provenance policy for our IoT framework. We extend XACML to include the SDP component.
 
 \subsection{eXtensible Access Control Markup Language}
  XACML is an access control policy based language that allows for the creation and enforcement of policies written in XML. It is a standard developed by the Organization of Advancement of Structured Information Standards(OASIS). Since it is written in XML, this framework allows for extensible and flexible policy documents. 
@@ -37,7 +48,7 @@ In this chapter we define our model and algorithms for storage optimization of p
  
  \begin{itemize}
  
- \item Policy Administration Point (PAP): THis component of XACML
+ \item Policy Administration Point (PAP): This component of XACML
 is involved with the generation of policy document. A Policy document is created by specifications and requirements set aside by an administrator.
 
  \item Policy Decision Point (PDP): The Policy Decision Point evaluates policies by the request context generated by a user. Based on the request, It generates a response(accept,deny or intermidiate) This response is communicated with the Policy Enforcement Point which enforces the response sent by the PDP.
@@ -48,9 +59,7 @@ is involved with the generation of policy document. A Policy document is created
  \end{itemize}
 
 
-
-
-Compression techniques could be applied at various levels of the IoT architecture to provide further storage efficiency of provenance data. Using the use case of the smart home depicted in chapter 2, a policy framework could be implemented and incorporated into the IoT framework which allows a device administrators to specify what kinds of provenance data to collect. The policy acts an enforcement point providing an efficient storage mechanism in a resource constrained environment of the devices contained in the smart home. The contents of the implementation details for the policy framework which specifies the policy grammar and the policy architecture across the IoT stack are left as future work.
+\par Compression techniques could also be applied at various levels of the IoT architecture to provide further improve the storage efficiency of provenance data. Using the use case of the smart home depicted in chapter 2, a policy framework could be implemented and incorporated into the IoT which allows a device administrators to specify what kinds of provenance data to collect. The policy acts an enforcement point providing an efficient storage mechanism in a resource constrained environment. The contents of the implementation details for the policy framework which specifies the policy grammar and the policy architecture across the IoT stack are left as future work.
 
 
 
