--- a/chapter6.tex
+++ b/chapter6.tex
@@ -16,7 +16,7 @@ Some of the proposed future work for this research is outlined bellow:
 
 \item Provenance Versioning: Provenance version creates cycles. When a file is read or edited do we create a new instance of the file? Tracking all transformations that occurs on a data object in memeory constrained devices might lead to running out of storage space. A new instance of the provenance of that file should be created and included in the provenance data.
 
-\item Securing Provenance: Due to the great level of sensitivity that  provenance data entails, it is of utmost importance to ensure the confidentiality and integrity of provenance data stored on IoT devices while at rest or in transit. Proper encryption and authentication techniques need to be employed to ensure the confidentiality, integrity, and availability of provenance data.
+\item Securing Provenance: Due to the great level of sensitivity that  provenance data entails, it is of utmost importance to ensure the confidentiality and integrity of provenance data stored on IoT devices while at rest or in transit. Proper encryption and authentication techniques \cite{Hasan:2009:CFP:1525908.1525909} need to be employed to ensure the confidentiality, integrity, and availability of provenance data.
 
 \end{itemize}
 
